@@ -314,8 +314,8 @@ Format 2
 \bind "S-KP_Next"                    "screen-down-select"
 \bind "S-C-KP_Home"                  "buffer-begin-select"
 \bind "S-C-KP_End"                   "buffer-end-select"
-\bind "S-C-KP_Prior"                 "buffer-begin-select"
-\bind "S-C-KP_Next"                  "buffer-end-select"
+\bind "S-C-KP_Prior"                 "buffer-move-previous"
+\bind "S-C-KP_Next"                  "buffer-move-next"
 \bind "C-KP_Insert"                  "copy"
 \bind "S-KP_Insert"                  "paste"
 \bind "S-KP_Delete"                  "cut"
