@@ -249,8 +249,8 @@ Format 2
 \bind "S-C-KP_Down"             "paragraph-down-select"
 \bind "S-KP_Home"               "line-begin-select"
 \bind "S-KP_End"                "line-end-select"
-\bind "S-KP_Prior"              "screen-up-select"
-\bind "S-KP_Next"               "screen-down-select"
+\bind "S-KP_Prior"              "buffer-move-previous"
+\bind "S-KP_Next"               "buffer-move-next"
 \bind "S-C-KP_Home"             "buffer-begin-select"
 \bind "S-C-KP_End"              "buffer-end-select"
 \bind "S-C-KP_Prior"            "buffer-begin-select"
